main activity basic functionality finished

--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -15,12 +15,24 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <!--        Two components, score board and timer-->
-        <Button
-            android:id="@+id/button"
+
+        <EditText
+            android:id="@+id/timer"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Button"
+            android:autofillHints="00:00"
+            android:ems="10"
+            android:inputType="time"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/score"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/timer"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
@@ -40,8 +52,10 @@
             android:layout_height="120dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="14dp"
+            android:background="@null"
             android:contentDescription="@string/img_alt"
-            android:scaleType="fitCenter"
+            android:scaleType="centerCrop"
+            android:tag="imageButton"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@+id/imageButton"
             app:srcCompat="@drawable/code" />
@@ -51,8 +65,10 @@
             android:layout_width="120dp"
             android:layout_height="120dp"
             android:layout_marginTop="14dp"
+            android:background="@null"
             android:contentDescription="@string/img_alt"
-            android:scaleType="fitCenter"
+            android:scaleType="centerCrop"
+            android:tag="imageButton"
             app:layout_constraintEnd_toStartOf="@+id/imageButton3"
             app:layout_constraintStart_toEndOf="@+id/imageButton1"
             app:layout_constraintTop_toTopOf="@+id/imageButton"
@@ -65,8 +81,10 @@
             android:layout_marginTop="14dp"
             android:layout_marginEnd="16dp"
             android:adjustViewBounds="true"
+            android:background="@null"
             android:contentDescription="@string/img_alt"
-            android:scaleType="fitCenter"
+            android:scaleType="centerCrop"
+            android:tag="imageButton"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="@+id/imageButton"
             app:srcCompat="@drawable/code" />
@@ -78,8 +96,10 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="14dp"
             android:adjustViewBounds="true"
+            android:background="@null"
             android:contentDescription="@string/img_alt"
-            android:scaleType="fitCenter"
+            android:scaleType="centerCrop"
+            android:tag="imageButton"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/imageButton1"
             app:srcCompat="@drawable/code" />
@@ -90,8 +110,10 @@
             android:layout_height="120dp"
             android:layout_marginTop="14dp"
             android:adjustViewBounds="true"
+            android:background="@null"
             android:contentDescription="@string/img_alt"
-            android:scaleType="fitCenter"
+            android:scaleType="centerCrop"
+            android:tag="imageButton"
             app:layout_constraintEnd_toStartOf="@+id/imageButton6"
             app:layout_constraintStart_toEndOf="@+id/imageButton4"
             app:layout_constraintTop_toBottomOf="@+id/imageButton2"
@@ -104,8 +126,10 @@
             android:layout_marginTop="14dp"
             android:layout_marginEnd="16dp"
             android:adjustViewBounds="true"
+            android:background="@null"
             android:contentDescription="@string/img_alt"
-            android:scaleType="fitCenter"
+            android:scaleType="centerCrop"
+            android:tag="imageButton"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/imageButton3"
             app:srcCompat="@drawable/code" />
@@ -117,8 +141,10 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="14dp"
             android:adjustViewBounds="true"
+            android:background="@null"
             android:contentDescription="@string/img_alt"
-            android:scaleType="fitCenter"
+            android:scaleType="centerCrop"
+            android:tag="imageButton"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/imageButton4"
             app:srcCompat="@drawable/code" />
@@ -129,8 +155,10 @@
             android:layout_height="120dp"
             android:layout_marginTop="14dp"
             android:adjustViewBounds="true"
+            android:background="@null"
             android:contentDescription="@string/img_alt"
-            android:scaleType="fitCenter"
+            android:scaleType="centerCrop"
+            android:tag="imageButton"
             app:layout_constraintEnd_toStartOf="@+id/imageButton9"
             app:layout_constraintStart_toEndOf="@+id/imageButton7"
             app:layout_constraintTop_toBottomOf="@+id/imageButton5"
@@ -143,8 +171,10 @@
             android:layout_marginTop="14dp"
             android:layout_marginEnd="16dp"
             android:adjustViewBounds="true"
+            android:background="@null"
             android:contentDescription="@string/img_alt"
-            android:scaleType="fitCenter"
+            android:scaleType="centerCrop"
+            android:tag="imageButton"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/imageButton6"
             app:srcCompat="@drawable/code" />
@@ -156,8 +186,10 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="14dp"
             android:adjustViewBounds="true"
+            android:background="@null"
             android:contentDescription="@string/img_alt"
-            android:scaleType="fitCenter"
+            android:scaleType="centerCrop"
+            android:tag="imageButton"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/imageButton7"
             app:srcCompat="@drawable/code" />
@@ -168,8 +200,10 @@
             android:layout_height="120dp"
             android:layout_marginTop="14dp"
             android:adjustViewBounds="true"
+            android:background="@null"
             android:contentDescription="@string/img_alt"
-            android:scaleType="fitCenter"
+            android:scaleType="centerCrop"
+            android:tag="imageButton"
             app:layout_constraintEnd_toStartOf="@+id/imageButton12"
             app:layout_constraintStart_toEndOf="@+id/imageButton10"
             app:layout_constraintTop_toBottomOf="@+id/imageButton8"
@@ -182,8 +216,10 @@
             android:layout_marginTop="14dp"
             android:layout_marginEnd="16dp"
             android:adjustViewBounds="true"
+            android:background="@null"
             android:contentDescription="@string/img_alt"
-            android:scaleType="fitCenter"
+            android:scaleType="centerCrop"
+            android:tag="imageButton"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/imageButton9"
             app:srcCompat="@drawable/code" />
