--- a/app/src/main/res/layout/content_load.xml
+++ b/app/src/main/res/layout/content_load.xml
@@ -665,11 +665,11 @@
             style="?android:attr/progressBarStyleHorizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="16dp"
+            android:layout_marginBottom="8dp"
             android:progressBackgroundTint="@color/colorPrimaryDark"
             android:progressTint="@color/colorPrimary"
             android:visibility="invisible"
-            app:layout_constraintBottom_toTopOf="@id/confirm"
+            app:layout_constraintBottom_toTopOf="@id/loadingText"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -685,8 +685,19 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="1.0" />
+
+        <TextView
+            android:id="@+id/loadingText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:text="@string/loading_text"
+            android:visibility="invisible"
+            app:layout_constraintBottom_toTopOf="@id/confirm"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/progressBar" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
