--- a/app/src/main/res/layout/item_loading_image.xml
+++ b/app/src/main/res/layout/item_loading_image.xml
@@ -18,7 +18,7 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/code" />
+        app:srcCompat="@drawable/ic_question_mark" />
 
     <ProgressBar
         android:id="@+id/progressBar"
