--- a/app/src/main/res/layout/item_loading_image.xml
+++ b/app/src/main/res/layout/item_loading_image.xml
@@ -2,8 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="90dp"
-    android:layout_height="90dp"
-    android:layout_margin="8dp">
+    android:layout_height="90dp">
 
     <ImageButton
         android:id="@+id/imageButton"
